--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "prezto"]
 	path = prezto
 	url = https://github.com/sorin-ionescu/prezto.git
+[submodule "vim/dein.vim"]
+	path = vim/dein.vim
+	url = https://github.com/Shougo/dein.vim.git
