--- a/tmux.conf
+++ b/tmux.conf
@@ -6,20 +6,17 @@ unbind C-b
 set -sg escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-bind C-a send-prefix
-bind | split-window -h
-bind - split-window -v
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+bind -n S-left select-pane -L
+bind -n S-down select-pane -D
+bind -n S-up select-pane -U
+bind -n S-right select-pane -R
+bind -n C-o select-pane -t :.+
+bind C-h select-window -t :-
+bind C-l select-window -t :+
+bind H resize-pane -L 5
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+bind L resize-pane -R 5
 setw -g mouse
 
 # ------------------------------
@@ -48,7 +45,6 @@ set -g message-attr bright
 set -g status-left-length 40
 set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
-set -g status-utf8 on
 set -g status-interval 60
 set -g status-justify centre
 setw -g monitor-activity on
