--- a/vim/dein.toml
+++ b/vim/dein.toml
@@ -75,6 +75,10 @@ repo = 'rcmdnk/vim-markdown'
 on_ft = ['markdown', 'mkd']
 
 [[plugins]]
+repo = 'JamshedVesuna/vim-markdown-preview'
+on_ft = ['markdown', 'mkd']
+
+[[plugins]]
 repo = 'marijnh/tern_for_vim'
 on_ft = 'javascript'
 build = 'npm install'
