--- a/nvimrc/nvim/deinlazy.toml
+++ b/nvimrc/nvim/deinlazy.toml
@@ -1,80 +1,122 @@
 [[plugins]]
-repo = 'Shougo/tabpagebuffer.vim'
-on_path = '.*'
-
-[[plugins]]
-repo = 'Shougo/neopairs.vim'
-on_i = 1
-
-[[plugins]]
-repo = 'Shougo/neomru.vim'
-on_path = '.*'
-
-[[plugins]]
-repo = 'Shougo/neocomplete.vim'
-depends = 'context_filetype.vim'
-if = "has('lua')"
-on_i = 1
-hook_source = '''
-  let g:neocomplete#enable_at_startup = 1
-  source ~/.vim/rc/plugins/neocomplete.rc.vim
-'''
-
-[[plugins]]
-repo = 'Shougo/neosnippet.vim'
-depends = ['neosnippet-snippets', 'context_filetype.vim']
-on_i = 1
-on_ft = 'snippet'
-hook_source = 'source ~/.vim/rc/plugins/neosnippet.rc.vim'
-
-[[plugins]]
-repo = 'Shougo/context_filetype.vim'
-
-[[plugins]]
 repo = 'Shougo/neco-vim'
 on_ft = 'vim'
 on_i = 1
-
-[[plugins]]
-repo = 'Shougo/neoinclude.vim'
-on_path = '.*'
 
 [[plugins]]
 repo = 'Shougo/neco-syntax'
 on_i = 1
 
 [[plugins]]
-repo = 'Shougo/vinarise.vim'
-on_cmd = 'Vinarise'
-hook_add = 'let g:vinarise_enable_auto_detect = 1'
+repo = 'othree/html5.vim'
+on_ft = ['html']
 
 [[plugins]]
-repo = 'vim-jp/vital.vim'
+repo = 'hail2u/vim-css3-syntax'
+on_ft = ['css']
 
 [[plugins]]
-repo = 'thinca/vim-fontzoom'
-on_map = [['n', '<Plug>']]
-hook_add = '''
-  nmap + <Plug>(fontzoom-larger)
-  nmap _ <Plug>(fontzoom-smaller)
-'''
+repo = 'othree/yajs.vim'
+on_ft = ['js']
 
 [[plugins]]
-repo = 'rhysd/accelerated-jk'
-on_map = [['n', '<Plug>']]
-hook_add = '''
-  nmap <silent>j <Plug>(accelerated_jk_gj)
-  nmap <silent>k <Plug>(accelerated_jk_gk)
-'''
+repo = 'othree/es.next.syntax.vim'
+on_ft = ['js']
+
+[[plugins]]
+repo = 'marijnh/tern_for_vim'
+on_ft = ['js']
+build = 'npm install'
+
+[[plugins]]
+repo = 'mxw/vim-jsx'
+on_ft = ['jsx']
+
+[[plugins]]
+repo = 'posva/vim-vue'
+on_ft = ['vue']
+
+[[plugins]]
+repo = 'vim-ruby/vim-ruby'
+on_map = '<Plug>'
+on_ft = ['ruby']
+
+[[plugins]]
+repo = 'tpope/vim-rails'
+on_map = '<Plug>'
+on_ft = ['ruby']
+
+[[plugins]]
+repo = 'tpope/vim-endwise'
+on_ft = ['ruby']
+
+[[plugins]]
+repo = 'vim-scripts/ruby-matchit'
+on_ft = ['ruby']
+
+[[plugins]]
+repo = 'todesking/ruby_hl_lvar.vim'
+on_ft = ['ruby']
 
 [[plugins]]
 repo = 'fatih/vim-go'
 on_ft = 'go'
+hook_add = '''
+  let g:go_highlight_functions = 1
+  let g:go_highlight_methods = 1
+  let g:go_highlight_fields = 1
+  let g:go_highlight_types = 1
+  let g:go_highlight_operators = 1
+  let g:go_highlight_build_constraints = 1
+'''
 
 [[plugins]]
-repo = 'todesking/ruby_hl_lvar.vim'
-on_ft = 'ruby'
+repo = 'StanAngeloff/php.vim'
+on_ft = ['php']
+hook_add = '''
+  let g:PHP_vintage_case_default_indent = 1
+'''
 
 [[plugins]]
-repo = 'osyo-manga/vim-monster'
-on_ft = 'ruby'
+repo = 'shawncplus/phpcomplete.vim'
+on_ft = ['php']
+
+[[plugins]]
+repo = 'vim-jp/cpp-vim'
+on_ft = ['cpp']
+
+[[plugins]]
+repo = 'vim-perl/vim-perl'
+on_ft = ['pl']
+
+[[plugins]]
+repo = 'cespare/vim-toml'
+on_ft = ['toml']
+
+[[plugins]]
+repo = 'elzr/vim-json'
+on_ft = ['json']
+
+[[plugins]]
+repo = 'plasticboy/vim-markdown'
+on_ft = ['markdown', 'md']
+
+[[plugins]]
+repo = 'JamshedVesuna/vim-markdown-preview'
+on_ft = ['markdown', 'md']
+hook_add = '''
+  let g:vim_markdown_preview_github = 1
+  let g:vim_markdown_preview_hotkey = '<C-m>'
+  let g:vim_markdown_preview_browser = 'Google Chrome'
+'''
+
+[[plugins]]
+repo = 'JamshedVesuna/vim-markdown-preview'
+on_ft = ['markdown', 'md']
+
+[[plugins]]
+repo = 'aklt/plantuml-syntax'
+on_ft = ['pu', 'uml', 'plantuml']
+hook_add = '''
+  let g:plantuml_executable_script = '~/.functions/plantuml'
+'''
