Add deoplete build event

--- a/nvimrc/nvim/dein.toml
+++ b/nvimrc/nvim/dein.toml
@@ -33,6 +33,7 @@ repo = 'tpope/vim-fugitive'
 
 [[plugins]]
 repo = 'Shougo/deoplete.nvim'
+build = ':UpdateRemotePlugins'
 hook_add = '''
   let g:deoplete#enable_at_startup = 1
 '''
