--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = prezto
 	url = https://github.com/sorin-ionescu/prezto.git
 [submodule "vim/dein.vim"]
-	path = vim/dein.vim
+	path = config/nvim/dein.vim
 	url = https://github.com/Shougo/dein.vim.git
