--- a/config/nvim/deinlazy.toml
+++ b/config/nvim/deinlazy.toml
@@ -21,6 +21,9 @@ repo = 'ConradIrwin/vim-bracketed-paste'
 repo = 'bronson/vim-trailing-whitespace'
 
 [[plugins]]
+repo = 'Yggdroot/indentLine'
+
+[[plugins]]
 repo = 'Shougo/context_filetype.vim'
 hook_source = '''
   let g:context_filetype#filetypes = {
