--- a/config/nvim/dein.toml
+++ b/config/nvim/dein.toml
@@ -69,7 +69,15 @@ hook_add = '''
 [[plugins]]
 repo = 'Shougo/deoplete.nvim'
 build = ':UpdateRemotePlugins'
+on_i = 1
 hook_add = '''
   let g:deoplete#enable_at_startup = 1
+  let g:deoplete#enable_smart_case = 1
 '''
-on_i = 1
+
+[[plugins]]
+repo = 'kassio/neoterm'
+hook_source = '''
+  let g:neoterm_position = 'horizontal'
+  let g:neoterm_automap_keys = ',tt'
+'''
