Update ale settings

--- a/config/nvim/dein.toml
+++ b/config/nvim/dein.toml
@@ -35,11 +35,12 @@ hook_add = '''
   let g:ale_statusline_format = ['⨉ %d', '⚠ %d', '⬥ ok']
   let g:ale_sign_error = '⤫'
   let g:ale_sign_warning = '⚠'
+  let g:ale_echo_msg_format = '[%linter%] %s [%severity%]'
 
   let g:ale_linters = {
     \ 'c': ['clang'],
     \ 'c++': ['clang'],
-    \ 'php': ['php -l'],
+    \ 'php': ['php'],
     \ 'ruby': ['rubocop', 'ruby']
   \ }
 '''
