--- a/config/nvim/deinlazy.toml
+++ b/config/nvim/deinlazy.toml
@@ -120,8 +120,11 @@ repo = 'othree/yajs.vim'
 on_ft = ['javascript', 'javascript.jsx']
 
 [[plugins]]
-repo = 'pangloss/vim-javascript'
+repo = 'billyvg/tigris.nvim'
 on_ft = ['javascript', 'javascript.jsx']
+hook_post_update = '''
+  let g:dein#plugin.build = './install.sh'
+'''
 
 [[plugins]]
 repo = 'mxw/vim-jsx'
@@ -157,6 +160,16 @@ hook_source = '''
 [[plugins]]
 repo = 'letientai299/vim-react-snippets'
 on_ft = ['javascript', 'javascript.jsx']
+
+[[plugins]]
+repo = 'prettier/vim-prettier'
+build = '''
+  yarn install
+'''
+hook_source = '''
+  let g:prettier#autoformat = 0
+  autocmd BufWritePre *.js,*.jsx,*.mjs,*.ts,*.tsx,*.css,*.less,*.scss,*.json,*.graphql,*.md,*.vue PrettierAsync
+'''
 
 [[plugins]]
 repo = 'leafgarland/typescript-vim'
