--- a/config/nvim/deinlazy.toml
+++ b/config/nvim/deinlazy.toml
@@ -74,6 +74,20 @@ hook_source = '''
       \ 'ntype' : 'n'
     \ }
   \ }
+
+  let g:tagbar_type_typescript = {
+    \ 'ctagstype': 'typescript',
+    \ 'kinds': [
+      \ 'c:classes',
+      \ 'n:modules',
+      \ 'f:functions',
+      \ 'v:variables',
+      \ 'v:varlambdas',
+      \ 'm:members',
+      \ 'i:interfaces',
+      \ 'e:enums',
+    \ ]
+  \ }
 '''
 
 [[plugins]]
