--- a/config/nvim/deinlazy.toml
+++ b/config/nvim/deinlazy.toml
@@ -235,6 +235,7 @@ in_i = 1
 depends = ['deoplete.nvim']
 hook_source = '''
   let g:deoplete#sources#go#gocode_binary = $GOPATH . '/bin/gocode'
+  let g:deoplete#sources#go#sort_class = ['package', 'func', 'type', 'var', 'const']
 '''
 
 [[plugins]]
