--- a/config/nvim/deinlazy.toml
+++ b/config/nvim/deinlazy.toml
@@ -268,6 +268,14 @@ repo = 'udalov/kotlin-vim'
 on_ft = ['kotlin']
 
 [[plugins]]
+repo = 'vim-scripts/VimClojure'
+on_ft = ['clojure']
+hook_source = '''
+  let g:clj_highlight_builtins = 1
+  let g:clj_paren_rainbow = 1
+'''
+
+[[plugins]]
 repo = 'zchee/deoplete-zsh'
 depends = ['deoplete.nvim']
 on_ft = ['zsh']
